# UA-Ilab-Tools

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: check-required-files.yml  python-publish.yml  run-tests.yml
ua_ilab_tools/: api_types.py  extract_custom_forms.py  extract_custom_forms_template.py  ilab_api.py  ua_ilab_tools.py
ua_ilab_tools/tests/: extract_custom_form_info_samples_con_type_tube.xml  extract_custom_form_info_samples_not_ascii_characters.xml  extract_from_grid_con_type_eight_strip.xml  extract_from_grid_con_type_eight_strip_too_many_tubes.xml  extract_from_grid_container_name_in_form.xml  extract_from_grid_container_name_in_grid.xml  extract_from_grid_lvs_primers.xml  extract_from_grid_tgm_data.xml  test_ilab_tools.py
